fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
     --color-white: whitesmoke;
 }
 
+ul {
+    /* margin-top: -50px; */
+}
+
 li {
     margin: 5px 0;
     line-height: 1.8rem;
@@ -74,7 +78,7 @@ li {
     font-size: 1.3rem;
     padding-bottom: 20px;
     text-align: center;
-    margin: 50px 0;
+    margin: 50px 0 0 0;
 }
 
 #lagacy p {
